--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,11 +2,16 @@
 
 :root {
     --padding-container: 100px 0;
-    --color-title: #001A49;
+    --color-title: #6a149f;
+    --color-fondo: #000000;
+    --color-element-card: #6a149f;
+    --color-presentacion: #202020;
 }
 
 body {
     font-family: 'Poppins', sans-serif;
+    background-color: var(--color-fondo);
+    color:#fff;
 }
 
 .container {
@@ -113,7 +118,7 @@ body {
 
 .cta {
     display: inline-block;
-    background-color: #2091F9;
+    background-color: #333333;
     justify-self: center;
     color: #fff;
     text-decoration: none;
@@ -165,8 +170,8 @@ body {
 /* Knowledge */
 
 .knowledge {
-    background-color: #e5e5f7;
-    background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);
+    background-color: var(--color-presentacion);
+    /*background-image: radial-gradient(#444cf7 0.5px, transparent 0.5px), radial-gradient(#444cf7 0.5px, #e5e5f7 0.5px);*/
     background-size: 20px 20px;
     background-position: 0 0, 10px 10px;
     overflow: hidden;
@@ -209,29 +214,15 @@ body {
 }
 
 .card__element{
-    background-color: #e5e5f7;
+    background-color: var(--color-element-card);
     text-align: center;
     border-radius: 10px;
     width: 330px;
     padding: 40px;
-    --color-plan: #696871;
-    --color-price: #1D293F;
+    --color-plan: #ffffff;
     --bg-cta: #fff;
-    --color-cta: #5454D4;
-    --color-items: #696871;
+    --color-items: #ffffff;
 }
-
-.card__element--best{
-    width: 370px;
-    padding: 60px 40px;
-    background-color: #FF7143;
-    --color-plan: rgb(255 255 255 / 75%);
-    --color-price: #fff;
-    --bg-cta: #9F3919;
-    --color-cta: #FFF;
-    --color-items: #fff;
-}
-
 
 .card__name{
     color: var(--color-plan);
@@ -263,62 +254,6 @@ body {
     font-weight: 600;
     color: var(--color-cta);
     box-shadow: 0 0 1px rgba(0, 0, 0, .5);
-}
-
-/* Testimony */
-
-.testimony{
-    background-color: #e5e5f7;
-}
-
-.testimony__container{
-    display: grid;
-    grid-template-columns: 50px 1fr 50px;
-    gap: 1em;
-    align-items: center;
-}
-
-.testimony__body{
-    display: grid;
-    grid-template-columns: 1fr max-content;
-    justify-content: space-between;
-    align-items: center;
-    gap: 2em;
-    grid-column: 2/3;
-    grid-row: 1/2;
-    opacity: 0;
-    pointer-events: none;
-}
-
-
-.testimony__body--show{
-    pointer-events: unset;
-    opacity: 1;
-    transition: opacity 1.5s ease-in-out;
-}
-
-.testimony__img{
-    width: 250px;
-    height: 250px;
-    border-radius: 50%;
-    object-fit: cover;
-    object-position: 50% 30%;
-}
-
-.testimony__texts{
-    max-width: 700px;
-}
-
-.testimony__course{
-    background-color: royalblue;
-    color: #fff;
-    display: inline-block;
-    padding: 5px;
-}
-
-.testimony__arrow{
-    width: 90%;
-    cursor: pointer;
 }
 
 /* Questions */
@@ -396,7 +331,7 @@ body {
 /* Footer */
 
 .footer{
-    background-color: #1D293F;
+    background-color: #2b2b2c;
 }
 
 .footer__title{
@@ -483,6 +418,30 @@ body {
 }
 
 /* Media queries */
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 @media (max-width:800px){
     .nav__menu{
