--- a/css/slider.css
+++ b/css/slider.css
@@ -1,83 +1,42 @@
-*{
-    margin:0;
-    padding: 0;
-    box-sizing: border-box;
+.modal {
+  display: none; 
+  position: fixed; 
+  z-index: 9999; 
+  padding-top: 60px; 
+  left: 0; top: 0;
+  width: 100%; height: 100%;
+  background-color: rgba(0,0,0,0.9);
 }
 
-body{
-    font-family: 'lato';
+.modal-content {
+  margin: auto;
+  display: block;
+  max-width: 90%;
+  max-height: 80%;
 }
 
-.slide-contenedor{
-    max-width:100%;
-    max-height: 100vh;
-    width: 50%;
-    height:auto;
-    position: relative;
-    overflow: hidden;
+.close {
+  position: absolute;
+  top: 20px; right: 35px;
+  color: #fff;
+  font-size: 40px;
+  font-weight: bold;
+  cursor: pointer;
 }
 
-.miSlider img{
-    width: 300px;
-    max-height: 100vh;
-    height: inherit;
-    object-fit: cover;
-    vertical-align: top;
-    transition: 2s;
+.controls {
+  position: absolute;
+  top: 50%;
+  width: 100%;
+  display: flex;
+  justify-content: space-between;
+  padding: 0 20px;
 }
 
-.direcciones{
-    width: 100%;
-    height: 100%;
-    position: absolute;
-    top: 0;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    font-size: 20px;
-}
-
-.direcciones a{
-    color: #fff;
-    display: inline-block;
-    padding: 20px;
-    text-decoration: none;
-}
-
-.direcciones a:hover{
-    background: rgba(0, 0, 0, .5);
-    transition: .5s;
-}
-
-.barras{
-    position: absolute;
-    bottom: 0;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    margin-bottom:15px;
-}
-
-.barra{
-    cursor: pointer;
-    height:2px;
-    width: 25px;
-    margin: 0 2px;
-    background: #dcdde1;
-    display: inline-block;
-    margin-left: 3px;
-}
-
-.active{
-    background-color: #e74c3c;
-}
-
-.fade{
-    animation-name: fade;
-    animation-duration: 1.5s;    
-}
-
-@keyframes fade {
-    from {opacity: .4;}
-    to{opacity:1;}
+.controls button {
+  background: none;
+  border: none;
+  color: white;
+  font-size: 40px;
+  cursor: pointer;
 }
